crates/swc_ecma_parser/tests/test262-error-references/fail/783f01472f94a412.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/783f01472f94a412.js:1:2
  |
1 | "\u000";
  |  ^^^^^

